Corrected grammatical errors in Chapter 3 Existing Work and Proposed Improvements.

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -46,7 +46,7 @@ discussed below, along with their shortcomings.
 \end{comment}
 
 \item
-  The papers that try to take the above further are also few in number and do not have any implementations with the
+  The papers that try to take the above further are also few in number and do not have any implementations for the
   proposed concepts (see \cite{spivey1999embedding, seres1999algebra, seres2001algebra, spivey2000functional,
     seres2000optimisation}).
   Moreover, none of them are complete and most lack many practical parts of \progLang{Prolog}.
@@ -86,7 +86,7 @@ Here is a discussion of problems mentioned above that this thesis tackles.
 
 \item the implementation is more complete.
 
-\item The implementation is not REPL based. You can write a program file and compile and run it like a normal a \progLang{Haskell} file.
+\item The implementation is not REPL based. You can write a program file and compile and run it like a normal \progLang{Haskell} file.
 \end{enumerate}
 
 \section{Chapter recapitulation}
