Corrected grammatical errors in chapter 6 Multi Paradigm Languages (Functional Logic Languages).

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -15,7 +15,7 @@ This chapter describes the approach for integrating properties of multiple langu
 paradigms, especially, functional logic programming languages.
 
 \section{Introduction to multi paradigm languages}
-Over the years another approach has branched off from embedding languages, merging and integrate programming
+Over the years another approach has branched off from embedding languages, merging and integrating programming
 languages from different paradigms.
 Let us take the \progLang{Scala} programming language \cite{website:scala} as an exaxmple. It is a hybrid
 object-functional programming language which takes features from each of the two paradigms.
@@ -87,7 +87,7 @@ and unifying theories using monads.
 
 \subsection{Functional logic programming languages}
 
-A recent survey \cite{hanus2007multi} throws light on this category hybrid languages. 
+A recent survey \cite{hanus2007multi} throws light on this category of hybrid languages. 
 
 One of the most prominent multi paradigm languages in \progLang{Haskell} is \progLang{Curry}
 \cite{antoy2010functional}.
@@ -122,7 +122,7 @@ Although the language can do a lot; gaps do exist, such as the need to improve n
 
 \section{Some multi paradigm languages}
 
-The list of multi paradigm languages is huge, but in this thesis we will mostly stick to functional logical
+The list of multi paradigm languages is huge, but in this thesis we will mostly stick to functional logic
 programming languages.
 Beginning with functional hybrids, a small project language called \progLang{Virgil}, \cite{website:virgil},
 combines objects to work with functions and procedures.
