Corrected grammatical errors in Chapter 8 Prolog.

--- a/pwp.tex
+++ b/pwp.tex
@@ -18,13 +18,13 @@ This chapter discusses the properties of the target language \progLang{Prolog} a
 translated to the host language to extend its capabilities.
 \progLang{Prolog} is a general purpose logic programming language mainly used in artificial intelligence and
 computational linguistics.
-It is a declarative language, i.e., a program is a set of facts an rules running a query on which will return a
+It is a declarative language, i.e., a program is a set of facts and rules running a query on which will return a
 result.
 The relation between them is defined by clauses using \textit{Horn Clauses} \cite{wikiprolog}.
 \progLang{Prolog} is very popular and has a number of implementations
 \cite{website:comparisonofprologimplementationswiki} for different purposes.
 \progLang{Prolog} comes from the same family as \progLang{Haskell} i.e., the declarative paradigm.
-One of the reasons is that both \progLang{Haskell}, the base language and \progLang{Prolog}, the target language
+One of the reasons for selecting these languages is that both \progLang{Haskell}, the base language and \progLang{Prolog}, the target language
 are from the same paradigm.
 This provides a platform to play around with the conflicting characteristics of the two languages.
 \progLang{Prolog} seems to be a very popular choice as a target language.
