Corrected grammatical errors in Chapter 9 Related Concepts.

--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -11,7 +11,7 @@
 
 
 \section{About this chapter}
-This chapter discusses concepts which are related to the work presented in this thesis which may no bear a direct
+This chapter discusses concepts which are related to the work presented in this thesis which may not bear a direct
 point of contact but contribute to understanding.
 
 \section{Map-reduce}
@@ -73,7 +73,7 @@ whereas for dynamic typing the advantages are:
 \section{Residuation and narrowing}
 Lastly some details on the working of functional logic programming languages, residuation and narrowing
 \cite{hanus1995curry,webiste:wikicurry}.
-Residuation involves delaying of functions calls until they are deterministic, that is, deterministic reduction of
+Residuation involves delaying of function calls until they are deterministic, that is, deterministic reduction of
 functions with partial data.
 This principle is used in languages like \progLang{Escher} \cite{lloyd1999programming:escher}, \progLang{Life}
 \cite{website:life}, \progLang{NUE-Prolog} \cite{website:nue-prolog} and \progLang{Oz} \cite{website:oz-mozart}.
