Corrected grammatical errors in Chapter 14 Fututre Scope.

--- a/futureScope.tex
+++ b/futureScope.tex
@@ -30,7 +30,7 @@ Listing~\ref{tab:qqprlginhskll} shows an example.
 
 This not only provides a simpler interface but also allows interchangeable usage of programming constructs of
 different languages in the same expression.
-For the example above, \prologConstruct{X} is a \progLang{Prolog} variable and \haskellConstruct{y} is a
+For the example above, \prologConstruct{X} is a \progLang{Prolog} variable and \haskellConstruct{varY} is a
 \progLang{Haskell} variable injected into the expression
 
 \section{Runtime search strategy selection}
