Changed Existing work by others to Related Works, as suggested by Dr. Alex.

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -7,7 +7,7 @@
 \begin{document}
 
 %-----------------------------------------------------------------------------
-\chapter{Existing Work and Proposed Improvements}\label{chap:proposedWork}
+\chapter{Related Works}\label{chap:proposedWork}
 %-----------------------------------------------------------------------------
 
 \section{About this chapter}\label{sec:what-this-chapter:proposedWork}
