Changed Chapter Recapitualtion to Summary in Related Works as suggested by Dr. Alex.

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -89,7 +89,7 @@ Here is a discussion of problems mentioned above that this thesis tackles.
 \item The implementation is not REPL based. You can write a program file and compile and run it like a normal \progLang{Haskell} file.
 \end{enumerate}
 
-\section{Chapter recapitulation}
+\section{Summary}
 This chapter reviewed current work and proposed improvements. The next chapter
 provides the contributions of this thesis which are not necessarily built upon existing work.
 
