Changed Chapter Recapitualtion to Summary in Chapter 5 Embedding a Programming Language into another Programming Language  as suggested by Dr. Alex.

--- a/embedding.tex
+++ b/embedding.tex
@@ -163,7 +163,7 @@ non-linear pattern-matching with backtracking.
 %% \end{description}
 
 
-\section{Chapter recapitulation}
+\section{Summary}
 Recapitulating, this chapter surveys the approach to embedding programming languages, especially \progLang{Prolog}
 in \progLang{Haskell}.
 Moreover, it describes tools, some of which are utilized in the prototype implementations.
