Changed Chapter Recapitualtion to Summary in Multi Paradigm Languages (Functional Logic Languages) as suggested by Dr. Alex.

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -184,7 +184,7 @@ with support for deterministic and non-deterministic computations. Contributing 
 predecessors \cite{website:alf,website:toy}.        
 
 
-\section{Chapter recapitulation}
+\section{Summary}
 Recapitulating, this chapter surveys the approach to merging different programming paradigms to result in a hybrid
 programming language.
 Moreover, we talked about multi paradigm declarative languages along with \progLang{Prolog} and \progLang{Haskell}
