Changed Chapter Recapitualtion to Summary in Haskell as suggested by Dr. Alex.

--- a/hwh.tex
+++ b/hwh.tex
@@ -178,7 +178,7 @@ Listing~\ref{tab:prlgappndhsklqq} shows us the advantages of quasi quotation (in
 metasynctactic variables).
 
 
-\section{Chapter recapitulation}
+\section{Summary}
 Recapitulating, this chapter provided information on \progLang{Haskell} as a tool for embedding domain specific
 languages. 
 
