Changed Chapter Recapitualtion to Summary in Prolog as suggested by Dr. Alex.

--- a/pwp.tex
+++ b/pwp.tex
@@ -351,7 +351,7 @@ trace for the query with the \prologConstruct{cut} operator.
 \label{fig:Trace with cut}
 \end{figure}
 
-\section{Chapter recapitulation}
+\section{Summary}
 Recapitulating, this chapter provided information on \progLang{Prolog} as a logic programming language.
 
 \ifMain\ifDraft
