Changed Chapter Recapitualtion to Summary in Related Concepts as suggested by Dr. Alex.

--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -86,7 +86,7 @@ The languages based on this approach are \progLang{ALF} \cite{website:alf}, \pro
 %% dgc : The [] in the section heading avoids having the reference show
 %% up in the table of contents.  
 
-\section{Chapter recapitulation}
+\section{Summary}
 Recapitulating, this chapter described the concepts loosely related to the thesis but do not bare a direct point of
 contact for better understanding.
 
