Changed Chapter Recapitualtion to Summary in Prototype 1 as suggested by Dr. Alex.

--- a/proto1.tex
+++ b/proto1.tex
@@ -532,7 +532,7 @@ runUnify $ monadicUnification fix1 fix2
 \end{code-list}
 
 
-\section{Chapter recapitulation}
+\section{Summary}
 Recapitulating, this chapter provides the ideas of language modification and monadic unification along with their
 respective implementations.
 
