Changed Chapter Recapitualtion to Summary in Prototype 2 as suggested by Dr. Alex.

--- a/proto2.tex
+++ b/proto2.tex
@@ -337,7 +337,7 @@ Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3unify}
 
 
 
-\section{Chapter recapitulation}
+\section{Summary}
 Recapitulating, this chapter provided an implementation of a \prologConstruct{Prolog}-like language adopted from
 \cite{prolog-lib} and incorporated a monadic unifier built from \cite{unification-fd-lib} to create a
 \progLang{Prolog} query resolver.
