Changed Chapter Recapitualtion to Summary in Prototype 3 as suggested by Dr. Alex.

--- a/proto3.tex
+++ b/proto3.tex
@@ -226,7 +226,7 @@ in previous prototypes.
 The major changes occur in \haskellConstruct{substConvertor} used to convert the result of monadic unification into
 the original \haskellConstruct{Subst} form and \haskellConstruct{unify}.
 
-\section{Chapter recapitulation}
+\section{Summary}
 Recapitulating, this chapter provided us with a working implementation of a \progLang{Prolog}-like interpreter with
 the option to change the search strategy further proving the modularity and genericity of the language modification
 and monadic unification procedure.
