--- a/proto4.tex
+++ b/proto4.tex
@@ -244,7 +244,7 @@ Listing~\ref{tab:runiotype} describes the type signature of \haskellConstruct{ru
 \haskellConstruct{runIO} accepts as input the result from \haskellConstruct{runProg}, i.e., \haskellConstruct{PrologResult} and executes
 each action in the \haskellConstruct{IO Monad}.
 
-\section{Chapter recapitulation}
+\section{Summary}
 Recapitulating, this prototype gives an architecture for a two stage interpretation strategy for an embedded domain specific language. In 
 this process the first stage produces a pure interpreted program while the latter executes each action to produce output. This approach 
 provides modularity and control over the side effecting actions for execution.   
