--- a/futureScope.tex
+++ b/futureScope.tex
@@ -107,7 +107,7 @@ Listing~\ref{tab:hybridconstruct} provides an example.
 
 Moreover, Chapter~\ref{proto4} lacks an accompanying implementation.
 
-\section{Chapter recapitulation}
+\section{Summary}
 Recapitulating, this chapter provided us with points where this thesis could be extended in the future along with
 suitable samples for the respective implementations.
 
