Changed section 6.2 title from Introduction to multi paradigm languages to Multi paradigm languages in Multi Paradigm Languages (Functional Logic Languages).

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -14,7 +14,7 @@
 This chapter describes the approach for integrating properties of multiple languages from different programming
 paradigms, especially, functional logic programming languages.
 
-\section{Introduction to multi paradigm languages}
+\section{Multi paradigm languages}
 Over the years another approach has branched off from embedding languages, merging and integrating programming
 languages from different paradigms.
 Let us take the \progLang{Scala} programming language \cite{website:scala} as an exaxmple. It is a hybrid
