Changed ection 8.2 title from SImple Syntax to Syntax in Prolog.

--- a/pwp.tex
+++ b/pwp.tex
@@ -31,7 +31,7 @@ This provides a platform to play around with the conflicting characteristics of 
 Also for the specific topic of embedding \progLang{Prolog} in \progLang{Haskell}, implementations and publications
 exist which provide a starting point.
   
-\section{Simple Syntax}
+\section{Syntax}
 
 \progLang{Prolog} is dynamically typed.
 It has a single data type, the term, which has several subtypes: atoms, numbers, variables and compound terms
