Changed section 8.3 title from SImple Semantics to Semantics in Prolog.

--- a/pwp.tex
+++ b/pwp.tex
@@ -124,7 +124,7 @@ Variables in \progLang{Prolog} are rather different from those in most other lan
 
 \end{comment}
 
-\section{Simple Semantics}
+\section{Semantics}
 
 Since the commutative nature of logical disjunction and conjunction, declaratively speaking the order of rules and
 their sub goals is irrelevant.
