--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -14,7 +14,7 @@
 This chapter discusses concepts which are related to the work presented in this thesis which may not bear a direct
 point of contact but contribute to understanding.
 
-\section{Map-reduce}
+\section{MapReduce}
 
 \textit{MapReduce} is a programming model and an associated implementation for processing and generating large data
 sets.
