Changed flaws to disadvantages in Introduction as suggested by Dr. Alex.

--- a/introduction.tex
+++ b/introduction.tex
@@ -20,7 +20,7 @@ domain.
 Over the last decade the declarative style of programming has gained popularity.
 The methodologies that have stood out are the functional and logical approaches.
 The former is based on functions and lambda calculus, while the latter is based on Horn clause logic.
-Each of them has its own advantages and flaws.
+Each of them has its own advantages and disadvantages.
 How does one choose which approach to adopt?
 Perhaps one does not need to choose!
 This document looks at the attempts, improvements and future possibilities of uniting \progLang{Haskell}, a purely
