Changed common subroutine library to subroutine library as mentioned in the reference.

--- a/introduction.tex
+++ b/introduction.tex
@@ -106,7 +106,7 @@ can help to blend the two.
 enables encoding of search problems.
 
 A domain-specific language (DSL) is a concise micro language that offers tools and functionalities focused on a
-particular problem domain.\label{sec:DSL-def} In many cases, DSL programs are translated to calls to a common
+particular problem domain.\label{sec:DSL-def} In many cases, DSL programs are translated to calls to a
 subroutine library and the DSL can be viewed as a means to hide the details of that library \cite{van2000domain}.
 A domain specific language (DSL) is built specically to express the concepts of a particular domain.
 Generally, two types of DSL can be distinguished according to the underlying implementation strategy.
