--- a/introduction.tex
+++ b/introduction.tex
@@ -105,10 +105,10 @@ can help to blend the two.
 \progLang{Haskell} also has some support for logic programming \cite{website:logic-programming-haskell} which
 enables encoding of search problems.
 
-A domain-specific language (DSL) is a concise micro language that offers tools and functionalities focused on a
+A domain specific language (DSL) is a concise micro language that offers tools and functionalities focused on a
 particular problem domain.\label{sec:DSL-def} In many cases, DSL programs are translated to calls to a
 subroutine library and the DSL can be viewed as a means to hide the details of that library \cite{van2000domain}.
-A domain specific language (DSL) is built specically to express the concepts of a particular domain.
+A DSL is built specically to express the concepts of a particular domain.
 Generally, two types of DSL can be distinguished according to the underlying implementation strategy.
 An external DSL is constructed from scratch, starting from definition of the desired syntax to
 implementation of the associated parser for reading it.
