Changed domain specific language to DSL.

--- a/introduction.tex
+++ b/introduction.tex
@@ -114,7 +114,7 @@ An external DSL is constructed from scratch, starting from definition of the des
 implementation of the associated parser for reading it.
 In contrast, internal or embedded DSLs (eDSL) are constructed on top of an existing host language \cite{machadomodel}.
 
-Putting all of the above together, Domain Specific Languages are pretty good in doing what they are designed to do,
+Putting all of the above together, DSLs are pretty good in doing what they are designed to do,
 but nothing else, resulting in choosing a different language every time.
 On the other hand, a general purpose language can be used for solving a wide variety of problems but often the
 programmer ends up writing some code dictated by the language rather than by the problem.
