removed extraneous back-tick.

--- a/background.tex
+++ b/background.tex
@@ -38,7 +38,7 @@ A program itself consists of functions and functions only which when applied to 
 changing the state that is values on variables and so on.
 Higher order functions allow functions to be passed as arguments to other functions.
 The roots lie in $\lambda$-calculi \cite{website:lambdacalculuswiki}, a formal system in mathematical logic and
-computer science for expressing computations` based on function abstraction and application using variable binding
+computer science for expressing computations based on function abstraction and application using variable binding
 and substitution.
 It can be thought as the smallest programming language \cite{rojas2004tutorial}, a single rule and a single
 function definition scheme.
