Changed embedded Domain specific language to eDSL in Other Contributions.

--- a/accomplishedWork.tex
+++ b/accomplishedWork.tex
@@ -19,7 +19,7 @@ Section~\ref{sec:prototypes} describes the minimalistic implementations for the 
 
 \section{Possible directions for \progLang{Prolog} in \progLang{Haskell}}\label{sec:work-in-points}
 
-This thesis provides a literature review on embedded domain specific languages in Chapter~\ref{chap:embedding} and
+This thesis provides a literature review on embedded eDSLs in Chapter~\ref{chap:embedding} and
 a survey on multi paradigm declarative languages in Chapter~\ref{chap:multiparadigm}.
 The current chapter and Chapter~\ref{chap:proposedWork} evaluate and assess the current work for embedding
 \progLang{Prolog} in \progLang{Haskell}.
@@ -48,7 +48,7 @@ The details of these prototypes follows.
 
 \subsection{Prototype 1}
 
-Most languages have a recursive abstract syntax which restricts the embedded domain-specific language
+Most languages have a recursive abstract syntax which restricts the eDSL
 \enparen{eDSL, see p.~\pageref{sec:DSL-def}} in terms of its capability to \textit{open up} the language, i.e, to
 include meta syntactic variables, custom quantifiers and logic.
 \chapterReference{proto1}{Prototype 1} provides a methodology to convert a language whose recursive abstract
